still trying to fix overlap

--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@
     font-size: 16px;
     text-align: center;
     margin-top: 20px; 
+    padding: 20px;
+}
+
+/* Allocates space between headers and button/image pairs, styles titles */
+.operations_with_title h2,
+.properties_with_title h2,
+.factorizations_with_title h2 {
+    font-family: "Monaco", monospace;
+    color: 0xFFFFFF;
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
 }
 
 .operations,
@@ -53,13 +65,6 @@
     /*Ensures the sections do not overlap with each other */
     padding: 30px 20px;
     margin-top: 30px;
-}
-
-/* Allocates space between headers and button/image pairs */
-.operations_with_title h2,
-.properties_with_title h2,
-.factorizations_with_title h2 {
-    padding: 20px;
 }
 
 /* Allocates space between each button/image pair */
